<resources>
    <string name="app_name">Login and Register</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password_numbers_only">Password (Numbers only)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="go_to_login">Go to Login</string>
    <string name="register">Register</string>
</resources>